--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,41 @@
-body  {
-    background-color: rgb(209, 209, 209);
-    color: rgb(167, 167, 167);
+body {
+  background-color: #d1d1d1;
+  color: #a7a7a7;
 }
 
 h5 small {
-    font-size: 12px;
-    letter-spacing: -0.5px;
-    word-spacing: -0.5px;
+  font-size: 12px;
+  letter-spacing: -0.5px;
+  word-spacing: -0.5px;
 }
 
 .left-bar {
-    min-height: 100vh;
-    background: rgb(59, 59, 59);
+  min-height: 50vh;
+  background: #3b3b3b;
 }
 
 .main-body {
-    min-height: 100vh;
+  min-height: 50vh;
 }
 
 .main-body .card {
-    background: transparent;
-    color: rgb(34, 34, 34);
-    margin-top: 5px
+  background: transparent;
+  color: #222222;
+  margin-top: 5px;
 }
 
 /* Row chart settings */
-.dc-chart g.row text { 
-    fill: rgb(34, 34, 34);
+.dc-chart g.row text {
+  fill: #222222;
 }
-
-.dc-chart {}
 
 .dc-chart .dc-select-menu {
-    background: transparent;
-    text-align: center;
-    color: rgb(224, 224, 224);
-    overflow: hidden;
-    border: none;
-    width: 100%;
+  background: transparent;
+  text-align: center;
+  color: #e0e0e0;
+  overflow: hidden;
+  border: none;
+  width: 100%;
 }
 
-.dc-chart .dc-select-menu .dc-select-option {
-    
-}
+/*# sourceMappingURL=style.css.map */
