--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,14 @@ h5 small {
   word-spacing: -0.5px;
 }
 
+#loader {
+  background: #d1d1d1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1009;
+}
+
 .left-bar {
   min-height: 50vh;
   background: #3b3b3b;
@@ -37,5 +45,4 @@ h5 small {
   border: none;
   width: 100%;
 }
-
 /*# sourceMappingURL=style.css.map */
