--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,6 @@
 $backgroundGrey: rgb(209, 209, 209);
 $leftBackground: rgb(59, 59, 59);
 
-
 body {
     background-color: $backgroundGrey;
     color: rgb(167, 167, 167);
@@ -11,6 +10,14 @@ h5 small {
     font-size: 12px;
     letter-spacing: -0.5px;
     word-spacing: -0.5px;
+}
+
+#loader {
+    background:$backgroundGrey;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1009;
 }
 
 .left-bar {
