--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,7 @@ h5 small {
     .card {
         background: transparent;
         color: rgb(34, 34, 34);
-        margin-top: 5px
+        margin-top: 5px;
     }
 }
 
@@ -52,3 +52,22 @@ h5 small {
 }
 
 .dc-chart .dc-select-menu .dc-select-option {}
+
+@media (max-width: 766px) {
+    .left-bar {
+        min-height: 10vh;
+        background: red;
+    }
+    
+    .dc-chart{
+        width: 90vw;
+    }
+    .dc-chart .dc-select-menu {
+        background: yellow;
+        text-align: center;
+        color: rgb(224, 224, 224);
+        overflow: hidden;
+        border: none;
+        width: 100%;
+    }
+}
