--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,12 @@ h5 small {
 @media (max-width: 766px) {
   .left-bar {
     min-height: 10vh;
-    background: red;
   }
   .dc-chart {
     width: 90vw;
   }
   .dc-chart .dc-select-menu {
-    background: yellow;
+    background: transparent;
     text-align: center;
     color: #e0e0e0;
     overflow: hidden;
