--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #d1d1d1;
+  background-color: #16262E;
   color: #a7a7a7;
   border-top: 2px solid #355c7d;
 }
@@ -19,11 +19,13 @@ h5 small {
 }
 
 #loader {
-  background: #d1d1d1;
-  width: 100%;
-  height: 100%;
+  background: #16262E;
   position: absolute;
-  z-index: 1009;
+  z-index: 100;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  top: 0;
 }
 
 .left-bar {
