--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,8 @@
 $backgroundGrey: rgb(209, 209, 209);
-$leftBackground: #16262E;
+$darkBackground: #16262E;
 
 body {
-    background-color: $backgroundGrey;
+    background-color: $darkBackground;
     color: rgb(167, 167, 167);
     border-top: 2px solid #355c7d;
 }
@@ -22,15 +22,17 @@ h5 small {
 }
 
 #loader {
-    background: $backgroundGrey;
-    width: 100%;
-    height: 100%;
+    background: $darkBackground;
     position: absolute;
-    z-index: 1009;
+    z-index: 100;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    top: 0;
 }
 
 .left-bar {
-    background-color: $leftBackground;
+    background-color: $darkBackground;
     min-height: 10px;
 
     .left-bar-body {
