--- a/css/style.scss
+++ b/css/style.scss
@@ -42,6 +42,13 @@ h5 small {
     bottom: 0;
     left: 0;
     top: 0;
+    display: flex;
+    justify-content: center;
+
+    .loadText {
+        margin-top: 10%;
+        color: $darkGrey;
+    }
 }
 
 .left-bar {
