--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   height: 100vh;
   background-color: #d1d1d1;
   color: #a7a7a7;
-  border-top: 2px solid #355c7d;
+  border-top: 5px solid #355c7d;
   font-size: 10px;
 }
 
@@ -13,7 +13,7 @@ h5 small {
 }
 
 .bg-crime {
-  background-color: #21405c !important;
+  background-color: #484b4d !important;
 }
 
 .bg-crime-second {
@@ -49,7 +49,7 @@ h5 small {
 }
 
 .left-bar {
-  background-color: #484b4d;
+  background-color: #727272;
   min-height: 100%;
   padding-bottom: 10px;
 }
