--- a/css/style.scss
+++ b/css/style.scss
@@ -1,12 +1,14 @@
 // CSS color valiables
+$white: #f3f3f3;
+$black: #121212;
 $lightGrey: #d1d1d1;
 $bg: #a7a7a7;
-$sideGrey: #727272;
+$sideGrey: #505050;
 $darkGrey: #484b4d;
 $lightBlue: #355c7d;
 $darkBlue: #21405c;
-$lightGreen: #7CAE7A;
-$darkGreen: #839073;
+$lightGreen: #6bc768;
+$darkGreen: #91aa73;
 
 // Stlye for body
 body {
@@ -17,7 +19,7 @@ body {
     font-size: 10px;
 }
 
-// header overides
+// header overrides
 h5 small {
     font-size: 12px;
     letter-spacing: -0.5px;
@@ -85,13 +87,14 @@ h5 small {
     border-color: $lightGreen;
 
     a {
-        color: #eee;
+        color: $black;
         text-decoration: none;
+        text-shadow: 0.2px 0.2px 0px rgba(0, 0, 0, 0.4);
     }
 }
 
 .btn-crime:hover {
-    color: #fff;
+    color: #eee;
     background-color: $darkGreen;
     border-color: $lightGreen;
 }
@@ -105,6 +108,33 @@ h5 small {
         background: transparent;
         color: #222222;
         margin-top: 5px;
+        box-shadow: 0 0.5px 0 0.1px rgba(0, 0, 0, 0.4);
+
+        .card-body {
+            padding: 10px;
+        }
+    }
+}
+
+.mapLegend {
+    position: absolute;
+
+    span {
+        display: block;
+        padding: 4px;
+        margin: 1.5px;
+        color: $white;
+        font-size: 1.4em;
+        text-align: center;
+        box-shadow: 0 0.5px 0 0.1px rgba(0, 0, 0, 0.4);
+    }
+
+    .hi {
+        background: #f67280;
+    }
+
+    .lo {
+        background: #355c7d
     }
 }
 
